adjust height of image in modal to prevent overflow

--- a/css/modal.css
+++ b/css/modal.css
@@ -25,7 +25,7 @@
     max-height: 90vh;
 }
 .item-image{
-    width: 60%;
+    height: 60%;
     margin: auto;
     
 }
